cert-manager/self-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "webapp-demo"
spec:
  tls:
  - hosts:
    - www.quatrale.ca
    secretName: webapp-demo-ingress
  rules:
  - host: www.quatrale.ca
    http:
      paths:
      - path: /webapp-demo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: releasev1-webapp
            port:
              number: 8080
